
= ruote-sequel - CHANGELOG.txt


== ruote-sequel 2.2.1    not yet released

- query_workitems didn't recognize :skip option (Thanks Eric Smith)
- 'table_name' option for specifying something other than 'documents'


== ruote-sequel 2.2.0    released 2011/03/01

- initial release
